<resources>
    <string name="app_name" translatable="false">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Find on Wikipedia</string>
    <string name="wiki_helper_text">Look up the term on wikipedia</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="video">Video</string>
    <string name="screen_1">To Screen 1</string>
    <string name="screen_2">To Screen 1</string>
    <string name="button">Button</string>
    <string name="themes_red">Themes red</string>
    <string name="themes_blue">Themes blue</string>
    <string name="themes_green">Themes green</string>
    <string name="theme_change">Сменить тему</string>
    <string name="ok">Yes</string>
    <string name="no">No</string>
    <string name="theme_change_warning">Attention the application will be restarted or the theme will change after the next launch of the application</string>
    <string name="theme_switching">Theme switching</string>
    <string name="high_photo">High photo</string>
    <string name="low_photo">Low photo</string>
    <string name="no_photos_his_day">There are no photos this day</string>
    <string name="earth">Earth</string>
    <string name="floating_action_button">Date selection button</string>
    <string name="mars">Mars</string>
    <string name="layout" translatable="false">Layout</string>
    <string name="nasa_api" translatable="false">Nasa api</string>
    <string name="constrain" translatable="false">Constrain</string>
    <string name="coordinator" translatable="false">Coordinator</string>
    <string name="motion" translatable="false">Motion</string>
    <string name="large_text" translatable="false">"
        Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"</string>
    <string name="plus" translatable="false">+</string>
    <string name="animation">Animation</string>
    <string name="transitions_example" translatable="false">Transitions example</string>
    <string name="transition" translatable="false">Transition</string>
    <string name="explode">Explode</string>
    <string name="tap_on_me" translatable="false">TAP ON ME</string>
    <string name="zoom">Zoom</string>
    <string name="object_animation">Object animation</string>
    <string name="state_list_animator" translatable="false">State List Animator</string>
    <string name="statelistanimator_example">StateListAnimator Example</string>
    <string name="constraint_set">ConstraintSet</string>
    <string name="_5_2018">5 июня 2018 г.</string>
    <string name="krater">Кратер Даниэлсона</string>
    <string name="visibility_description" translatable="false">Показать описание</string>
    <string name="_67_arabia_terra">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
    <string name="description_photo">Описание фотографии</string>
    <string name="select_day_button">Кнопка выбрать день</string>
    <string name="you_can_choose">Вы можете выбрать \nлюбой прошедший день</string>


</resources>