<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_constrain"
        android:enabled="true"
        android:icon="@drawable/ic_animation"
        android:title="@string/constrain"/>
    <item
        android:id="@+id/action_coordinator"
        android:enabled="true"
        android:icon="@drawable/ic_animation"
        android:title="@string/coordinator"/>
    <item
        android:id="@+id/action_motion"
        android:enabled="true"
        android:icon="@drawable/ic_animation"
        android:title="@string/motion"/>
    <item
        android:id="@+id/action_constraintSet"
        android:enabled="true"
        android:icon="@drawable/ic_animation"
        android:title="@string/constraint_set"/>
</menu>